Add file sending caps

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <textarea id="offer" placeholder="Paste offer here"></textarea><br>
 Answer: <textarea id="answer"></textarea><br><div id="div"></div>
 Chat: <input id="chat"></input><br>
+Send: <input id="file" type="file"></input><br>
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+<script src="./FileSaver.js"></script>
 <script src="./script.js"></script>
 	</body>
 </html>
