Compress SDP by 5x in size

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@ Chat: <input id="chat"></input><br>
 Send: <input id="file" type="file"></input><br>
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <script src="./FileSaver.js"></script>
+<script src="./pako.js"></script>
+<script src="./base64.js"></script>
 <script src="./script.js"></script>
 	</body>
 </html>
