--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		<video id="v1" height="120" width="160" poster="./novid.png" autoplay muted></video>
 		<video id="v2" height="120" width="160" poster="./novid.png" autoplay></video><br>
 	</div>
+	<div class="circle one"></div>
+	<div class="circle two"></div>
+	<div class="circle three"></div>
 	<table>
 		<tr>
 			<td>
