--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<body>
 <div class="header">
 	<div class="title">Zenith</div>
+	<div class="header-item">About Us</div>
 </div>
 <div class="main">
 	<div class="vids">
