--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		<video id="v1" height="120" width="160" poster="./novid.png" autoplay muted></video>
 		<video id="v2" height="120" width="160" poster="./novid.png" autoplay></video><br>
 	</div>
+	<div>
+		<input type="checkbox" id="vidtoggle">Stream Video</input>
+	</div>
 	<div class="circle one"></div>
 	<div class="circle two"></div>
 	<div class="circle three"></div>
